--- a/components/02-molecules/forms/search/search.njk
+++ b/components/02-molecules/forms/search/search.njk
@@ -1,4 +1,4 @@
 <form class="usa-search" role="search">
   {%- render "@input-group", inputGroup -%}
-  {%- render "@button", button %}
+  {%- render "@button--secondary", button, true %}
 </form>
